# keiba-ai-v3

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md
.planning/debug/: calib-maxdev-vs-baselines.md  fukusho-recovery-070.md  label-newcomer-universe.md  phase12-recovery-harai.md  phase12-segment-eval-warning.md  race-date-null-racekey-fix.md  stopgate-label-keyerror.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  v1.1-domain-analysis.md
.planning/spikes/: CONVENTIONS.md  MANIFEST.md
.streamlit/: config.toml
docs/: keiba_ai_requirements_v1.3.md
docs/everydb2/: .prev_scrape_meta.json  .scrape_meta.json  01-TOKU_RACE.md  02-TOKU.md  03-RACE.md  04-UMA_RACE.md  (+58 more)
reports/: .gitkeep  04-eval.json  04-eval.md  05-backtest.json  05-backtest.md  06-evaluation.json  06-evaluation.md  08-audit.json  08-audit.md  09-speed-figure-domain.json  09-stopgate.json  09-stopgate.md  quality_report.json  quality_report.md
scripts/: apply_schema.sql  compare_phase4_window.py  run_ablation.py  run_apply_schema.py  run_backtest.py  run_evaluation.py  run_export_backtest_csv.py  run_export_predictions_csv.py  run_feature_build.py  run_label_etl.py  run_label_race_date_backfill.py  run_label_reconcile.py  run_normalized_etl.py  run_phase10_evaluation.py  run_phase11_evaluation.py  run_phase12_evaluation.py  run_quality_report.py  run_reproducibility_smoke.py  run_speed_figure_stopgate.py  run_train_predict.py  save_primary_prediction.py  switch_primary_model.py  verify_speed_figure_domain.py
snapshots/: .gitignore  feature_matrix_20260619-1a-v1.manifest.yaml  feature_matrix_20260619-1a-v2.manifest.yaml  feature_matrix_20260619-1a-v3.manifest.yaml  feature_matrix_20260620-1a-postreview-v2.manifest.yaml  feature_matrix_20260625-1a-speedfigure-v1.manifest.yaml  feature_matrix_20260626-1a-opponentstrength-v1.manifest.yaml  feature_matrix_20260626-1a-speedprofile-v1.manifest.yaml
src/: __init__.py
tests/: __init__.py  conftest.py  test_bootstrap.py  test_class_normalization.py  test_fukusho_label.py  test_label_race_date_backfill.py  test_label_reconcile.py  test_normalized_etl.py  test_quality_gate.py  test_raw_immutability.py  test_run_phase12_evaluation.py
(+490 files in other folders)
