[project]
name = "keiba-ai-v3"
version = "0.1.0"
description = "Keiba AI v3 — leak-free reproducible JRA複勝予測基盤"
readme = "README.md"
authors = [
    { name = "hart", email = "hiromu1018ks@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "psycopg[binary]==3.3.4",
    "psycopg-pool==3.3.1",
    "pandas==3.0.3",
    "pyarrow==24.0.0",
    "duckdb==1.5.3",
    "scikit-learn==1.9.0",
    "mlxtend==0.25.0",
    "pydantic",
    "pydantic-settings==2.14.1",
    "python-dotenv==1.1.0",
    "pyyaml",
    "lightgbm==4.6.0",
    "catboost==1.2.10",
    "plotly>=6.8.0",
    "scipy>=1.17.1",
    # Phase 12 falsification: clustered SE / Holm 補正（RESEARCH.md Standard Stack・byte-reproducible §19.1 で厳密固定）
    # [C2-12-01-1] statsmodels==0.14.6 厳密固定（将来の 0.14.7 等の解決による false fail 回避）
    "statsmodels==0.14.6",
    "streamlit==1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/config", "src/db", "src/ui"]

[dependency-groups]
dev = [
    "ruff==0.15.17",
    "pytest==9.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "requires_db: marks tests that need a live PostgreSQL everydb2 connection",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
